# NL2Flow

./: .env  .gitignore  LICENSE  README.md  compile_pyke_rules.py  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.ps1  run.py  run.sh  run_tests.py  setup.ps1  test_schema_extraction.py
app/: api_doc_scraper.py  dashboard_api.py  gpt_handler.py  main.py  models.py  transformer.py
app/rules/: field_mapper.py  field_mapping.krb
app/utils/: dynamodb_snapshots.py  logger.py  validator.py
dashboard/frontend/: package.json
dashboard/frontend/public/: index.html
deploy/: README.md  deploy.sh
infrastructure/: cloudformation.yaml
lambda_functions/: requirements.txt
rules/: __init__.py
scripts/: compile_pyke_rules.py
src/: requirements.txt
src/app/: api_doc_scraper.py  dashboard_api.py  main.py  requirements.txt  run.bat  run.ps1  setup.ps1  transformer.py
src/app/lambda_functions/: scheduled_scanner.py
src/app/rules/: field_mapping.krb
src/app/schemas/: email_flow_schema.json
src/app/tests/: conftest.py  test_dashboard_api.py  test_lambda_scanner.py  test_main.py
src/app/utils/: __init__.py  dynamodb_snapshots.py  logger.py  schema_diff.py  validator.py
src/frontend/: App.js  index.css  index.js  package-lock.json  package.json  tailwind.config.js
src/frontend/components/: ApiChanges.js  ApiSummary.js  Dashboard.js  Navbar.js  (+1 more)
src/tests/: test_lambda_scanner.py  test_order_confirmation.py  test_transformer.py
tests/: test_dashboard_api.py  test_main.py  test_order_confirmation.py  test_parse_request.py  test_transformer.py
(+5 files in other folders)
